Oneplus2 - enable HwKeys switch
Change-Id: Idf9a703fbd21962f1ce0f5555f7e15755a96d58f
Signed-off-by: STELIX <ssspinni@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -396,4 +396,6 @@
 
     <integer name="config_buttonBrightnessSettingDefault">60</integer>
 
+    <!-- Hardware keys on/off option -->
+    <bool name="config_hwKeysPref">true</bool>
 </resources>
