commented out to make buildable
Change-Id: Ib87dd94df8a29d937e8b880254f20cec3952363f

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -392,6 +392,6 @@
 
     <integer name="config_buttonBrightnessSettingDefault">60</integer>
 
-    <!-- Hardware keys on/off option -->
-    <bool name="config_hwKeysPref">true</bool>
+    <!-- Hardware keys on/off option
+    <bool name="config_hwKeysPref">false</bool> -->
 </resources>
